[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-agent-lib"
version = "0.1.0"
description = "Sentinel agent: OpenTelemetry bootstrap + heartbeat logic"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Sentinel Labs" }]

dependencies = [
    # Core OTel
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp>=1.25.0",

    # Instrumentations
    "opentelemetry-instrumentation-flask>=0.46b0",
    "opentelemetry-instrumentation-requests>=0.46b0",
    "opentelemetry-instrumentation-logging>=0.46b0",

    # Scheduler
    "APScheduler>=3.11.2",

    # Web framework
    "Flask>=2.3,<4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
